# cosmopoeia

./: .gitignore  Cargo.toml  Compiling.md  Development.md  Inannak-Points.gpkg  Readme.md  changelog.md  culture_worksheet.md  deploy.ers  deploy.sh  deploy_windows.ers  generate-docs.sh  idea.md  license.txt  pre-flight.sh  release.ers
docs/: Cultures Schema.md  Introduction.md  Namers Schema.md  Recipe Set Schema.md
json-schemas/: cultures.schema.json  namers.schema.json  terrain_tasks.schema.json
sample_data/: wisconsin.tif
share/culture_sets/: afmg_culture_all_world.json  afmg_culture_antique.json  afmg_culture_dark_fantasy.json  afmg_culture_european.json  afmg_culture_high_fantasy.json  afmg_culture_oriental.json  random_cultures.json
share/earth_namers/: Ancient Egyptian.txt  Finnish.txt  Hungarian.txt  Latin.txt  Tamil.txt
share/namers/: afmg_namers.json
share/namers/Earth/: Igbo.txt  Korean.txt  readme.md
share/qgis/: World.gpkg-shm  World.qgz
share/terrain_recipes/: afmg_recipes.json  heightmap-recipe.json
src/: algorithms.rs  errors.rs  gdal_fixes.rs  geometry.rs  main.rs  progress.rs  raster.rs  terrain.rs  test.rs  utils.rs  world_map.rs
src/algorithms/: beziers.rs  biomes.rs  civilization.rs  climate.rs  colors.rs  culture_sets.rs  cultures.rs  curves.rs  grouping.rs  mod.rs  naming.rs  nations.rs  population.rs  random_points.rs  raster_sampling.rs  rivers.rs  subnations.rs  terrain.rs  tiles.rs  towns.rs  triangles.rs  voronoi.rs  water_distance.rs  water_fill.rs  water_flow.rs
src/algorithms/culture_sets/: mod.rs
src/algorithms/naming/: Arabic.txt  English.txt  Japanese.txt  Khmer.txt  Mandarin.txt  Turkish.txt  Yoruba.txt  defaults.deflated  defaults.json  defaults.rs  mod.rs
src/commands/: big_bang.rs  convert_heightmap.rs  create.rs  dev.rs  docs.rs  gdal_dev.rs  gen_biome.rs  gen_civil.rs  gen_climate.rs  gen_nations.rs  gen_people.rs  gen_subnations.rs  gen_towns.rs  gen_water.rs  hello.rs  mod.rs  points.rs  raster_tile.rs  terrain.rs  tile.rs  triangles.rs  voronoi.rs
src/typed_map/: entities.rs  features.rs  fields.rs  layers.rs  mod.rs  schema.rs
src/utils/: arg_range.rs  coordinates.rs  edge.rs  extent.rs  mod.rs  namers_pretty_print.rs  point.rs  point_finder.rs  random.rs  simple_serde.rs  title_case.rs  world_shape.rs
src/world_map/: auxiliary_layers.rs  biome_layer.rs  culture_layer.rs  fields.rs  mod.rs  nation_layers.rs  property_layer.rs  tile_layer.rs  town_layer.rs  water_layers.rs
